Fixed small issues causing overflow

--- a/src/style/home.css
+++ b/src/style/home.css
@@ -18,7 +18,7 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 25rem;
-  padding-top: 3.125rem;
+  padding-top: 9.125rem;
   position: relative;
 }
 
